syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantProfile {
    rpc ReadApplicantProfile (ApplicantProfileIdRequest) returns (ApplicantProfilePayload);
    rpc CreateApplicantProfile (ApplicantProfilePayload) returns (google.protobuf.Empty);
    rpc UpdateApplicantProfile (ApplicantProfilePayload) returns (google.protobuf.Empty);
    rpc DeleteApplicantProfile (ApplicantProfilePayload) returns (google.protobuf.Empty);
}

message ApplicantProfileIdRequest {
	string Id = 1;
}

message ApplicantProfilePayload {
    string Id = 1;
	string Login = 2;
	google.protobuf.DoubleValue CurrentSalary = 3;
	google.protobuf.DoubleValue CurrentRate = 4;
	string Currency = 5;
	string Country = 6;
	string Province = 7;
	string Street = 8;
	string City = 9;
	string PostalCode = 10;
}